# hdz-grasp-proj

./: .gitignore  .gitmodules  readme.md
hdz_front_end_ws/: .gitignore  copy_grpc_msg.sh  source_ws.zsh
hdz_front_end_ws/src/grasp_model_grpc_msg/: package.xml  setup.cfg  setup.py
hdz_front_end_ws/src/grasp_model_grpc_msg/grasp_model_grpc_msg/: grasp_model_grpc_msg.proto  grasp_model_grpc_msg_pb2.py  grasp_model_grpc_msg_pb2.pyi  grasp_model_grpc_msg_pb2_grpc.py  utils.py
hdz_front_end_ws/src/hdz_front_end/: package.xml  setup.cfg  setup.py
hdz_front_end_ws/src/hdz_front_end/hdz_front_end/: data_aligner.py  fps_counter.py  generate_grpc.sh  grasp_model_client.py  hdz_front_end.py  hdz_user_interface.py  point_cloud_utils.py
hdz_front_end_ws/src/hdz_front_end/hdz_front_end/common_utils/: data_aligner.py  (+1 more)
hdz_front_end_ws/src/hdz_front_end/launch/: hdz_front_end.launch.py
hdz_grpc_ws/: build_install.sh  install_python_pkg.sh  readme.md
hdz_grpc_ws/src/hdz_grpc_example/: CMakeLists.txt
hdz_grpc_ws/src/hdz_grpc_example/python/: grasp_model_example.py
hdz_grpc_ws/src/hdz_grpc_example/src/: grasp_model_example.cpp
hdz_grpc_ws/src/hdz_grpc_msg/: CMakeLists.txt
hdz_grpc_ws/src/hdz_grpc_msg/python/: pyproject.toml.in
hdz_nuc_ws/: .gitignore  build_non_ros_pkgs.sh  readme.md
hdz_nuc_ws/non_ros_pkgs/src/hdz_grpc_client_example/: client_example.py  generate_grpc.sh
hdz_nuc_ws/non_ros_pkgs/src/hdz_grpc_msg/: CMakeLists.txt
hdz_nuc_ws/src/hdz_base_description/: package.xml
hdz_nuc_ws/src/hdz_base_description/launch/: view_robot.launch.py
hdz_nuc_ws/src/hdz_base_description/urdf/: hdz_base_macro.xacro
hdz_nuc_ws/src/hdz_driver/: CMakeLists.txt  package.xml
hdz_nuc_ws/src/hdz_driver/launch/: fake_control.launch.py  real_control.launch.py  realsense.launch.py
hdz_nuc_ws/src/hdz_full_description/: CMakeLists.txt
hdz_nuc_ws/src/hdz_full_description/launch/: view_robot.launch.py
hdz_nuc_ws/src/hdz_full_description/rviz/: view_robot.rviz
hdz_nuc_ws/src/hdz_full_description/urdf/: dh_ag95_gripper.xacro
hdz_nuc_ws/src/hdz_grpc_server/: CMakeLists.txt  package.xml
hdz_nuc_ws/src/hdz_grpc_server/launch/: start_server.launch.py
hdz_nuc_ws/src/hdz_grpc_server/src/: fmt_logger.hpp  fmt_user_types.hpp  gripper_node.cpp  hdz_grpc_move_grasp.cpp  hdz_grpc_move_grasp.hpp  hdz_grpc_server.cpp  hdz_grpc_server.hpp  main.cpp  moveit_node.cpp  moveit_node.hpp
hdz_nuc_ws/src/hdz_moveit_assistant/: .setup_assistant  package.xml
hdz_nuc_ws/src/hdz_moveit_assistant/config/: hdz_full.urdf.xacro  initial_positions.yaml
hdz_nuc_ws/src/hdz_moveit_assistant/launch/: moveit_rviz.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py
hdz_nuc_ws/src/hdz_moveit_config/: CMakeLists.txt
hdz_nuc_ws/src/hdz_moveit_config/config/: kinematics.yaml
hdz_nuc_ws/src/hdz_moveit_config/launch/: hdz_moveit.launch.py
hdz_nuc_ws/src/hdz_moveit_config/srdf/: hdz.srdf.xacro  hdz_macro.srdf.xacro
hdz_nuc_ws/src/hdz_scripts/: package.xml
hdz_nuc_ws/src/hdz_scripts/hdz_scripts/: add_use_sim_time.py  package_path_utils.py
hdz_ros2_ws/: clean_non_ros_pkgs.sh  readme.md
hdz_ros2_ws/non_ros_pkgs/src/hdz_grpc_client_example/: client_example.py  generate_grpc.sh
hdz_ros2_ws/non_ros_pkgs/src/hdz_grpc_msg/: CMakeLists.txt
hdz_ros2_ws/non_ros_pkgs/src/hdz_grpc_msg/cmake/: hdz_grpc_msgConfig.cmake
hdz_ros2_ws/src/hdz_base_description/: CMakeLists.txt
hdz_ros2_ws/src/hdz_base_description/rviz/: view_robot.rviz
hdz_ros2_ws/src/hdz_base_description/urdf/: hdz_base.xacro  hdz_base_macro.xacro
hdz_ros2_ws/src/hdz_driver/config/: hdz_controllers.yaml
hdz_ros2_ws/src/hdz_driver/launch/: fake_control.launch.py  real_control.launch.py  realsense.launch.py
hdz_ros2_ws/src/hdz_driver/rviz/: hdz_control.rviz
hdz_ros2_ws/src/hdz_front_end/: package.xml
hdz_ros2_ws/src/hdz_front_end/hdz_front_end/: grasp_model_client.py  hdz_front_end.py  hdz_grpc_arm_client.py
hdz_ros2_ws/src/hdz_front_end/launch/: hdz_front_end.launch.py
hdz_ros2_ws/src/hdz_full_description/: package.xml
hdz_ros2_ws/src/hdz_full_description/hdz_full_description/: robot_description_content.py
hdz_ros2_ws/src/hdz_full_description/urdf/: d435i.xacro  dh_ag95_gripper.xacro  gazebo.xacro  hdz_full.xacro  ur5e.urdf.xacro
hdz_ros2_ws/src/hdz_grpc_server/src/: gripper_node.hpp  grpc_config_node.hpp  hdz_grpc_arm.cpp  hdz_grpc_arm.hpp  hdz_grpc_greeter.cpp  hdz_grpc_greeter.hpp  moveit_node.hpp
hdz_ros2_ws/src/hdz_moveit_assistant/: CMakeLists.txt  readme.md
hdz_ros2_ws/src/hdz_moveit_assistant/config/: hdz_full.ros2_control.xacro  hdz_full.srdf  hdz_full.urdf.xacro  initial_positions.yaml  joint_limits.yaml  moveit_controllers.yaml  ros2_controllers.yaml
hdz_ros2_ws/src/hdz_moveit_assistant/launch/: demo.launch.py  move_group.launch.py  rsp.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
hdz_ros2_ws/src/hdz_moveit_config/: package.xml
hdz_ros2_ws/src/hdz_moveit_config/config/: controllers.yaml
hdz_ros2_ws/src/hdz_moveit_config/launch/: hdz_moveit.launch.py
hdz_ros2_ws/src/hdz_moveit_config/rviz/: view_robot.rviz
hdz_ros2_ws/src/hdz_moveit_config/srdf/: hdz_macro.srdf.xacro
hdz_ros2_ws/src/hdz_scripts/: setup.cfg  setup.py
hdz_ros2_ws/src/hdz_scripts/hdz_scripts/: __init__.py
hdz_ros2_ws/src/hdz_server/: CMakeLists.txt  package.xml
hdz_ros2_ws/src/hdz_server/launch/: start_server.launch.py
hdz_ros2_ws/src/hdz_server/src/: fmt_logger.hpp  fmt_user_types.hpp  gripper_node.cpp  hdz_server.hpp  main.cpp  moveit_node.cpp  moveit_node.hpp
hdz_ros2_ws/src/hdz_server_msg/: CMakeLists.txt  package.xml
hdz_ros2_ws/src/hdz_server_msg/msg/: Status.msg
hdz_ros2_ws/src/hdz_server_msg/srv/: GetEndEffectorPose.srv  GetJointPosition.srv  MoveTo.srv  MoveToJointPosition.srv  MoveToNamed.srv  SetGripper.srv
hdz_ros2_ws/src/hdz_sim_gazebo/: CMakeLists.txt  package.xml
hdz_ros2_ws/src/hdz_sim_gazebo/config/: hdz_sim_controllers.yaml
hdz_ros2_ws/src/hdz_sim_gazebo/gazebo_world/: static_box.world
hdz_ros2_ws/src/hdz_sim_gazebo/launch/: sim_control.launch.py
(+15 files in other folders)
