<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hdz_driver</name>
  <version>0.0.0</version>
  <description>This package integrates ros 2 control for hdz robot</description>
  <maintainer email="1023515576@qq.com">xy</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>ros2_control</exec_depend>
  <exec_depend>ros2_controllers</exec_depend>
  <exec_depend>ur</exec_depend>
  <exec_depend>hdz_full_description</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>