<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hdz_front_end</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="1023515576@qq.com">xy</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>python3-tqdm</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>