<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hdz_full_description</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="1023515576@qq.com">xy</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>hdz_scripts</exec_depend>
  <exec_depend>hdz_base_description</exec_depend>
  <exec_depend>ur_description</exec_depend>
  <exec_depend>dh_ag95_description</exec_depend>
  <exec_depend>dh_gripper_driver</exec_depend>
  <exec_depend>realsense2_description</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>