<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hdz_server</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="1023515576@qq.com">xy</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>hdz_scripts</exec_depend>

  <depend>moveit_ros_planning_interface</depend>
  <depend>rclcpp</depend>
  <depend>moveit_ros_move_group</depend>
  <!-- <depend>trac_ik_kinematics_plugin</depend> -->
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>control_msgs</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>hdz_server_msg</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
